--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </div>
     <!--Grid row-->
     <!--Grid row 2-->
-    <div class="row">
+    <div class="row" style="margin:20px">
 
       <!--Grid column-->
       <div class="col-lg-4 col-md-12">
@@ -416,16 +416,17 @@
   </div>
   <!--Main container-->
   <!--Footer-->
-  <footer>
+  <footer class="page-footer font-small pt-4" style="background-color: #563e91">
     <!--Section: contact-->
     <section id="contact" class="py-5" style="background-color: #eee;">
 
       <div class="container">
 
         <!-- Section heading -->
-        <h2 class="h1-responsive font-weight-bold text-center mb-5">Contact us</h2>
+        <h2 class="h1-responsive font-weight-bold text-center mb-5 grey-text">Contact us</h2>
         <!-- Section description -->
-        <p class="text-center w-responsive mx-auto mb-5">Guess you also like the food you want. It's better to move than
+        <p class="text-center w-responsive mx-auto mb-5 grey-text">Guess you also like the food you want. It's better to
+          move than
           to move.
 
           Order now.</p>
@@ -527,6 +528,50 @@
 
     </section>
     <!--Section: contact-->
+
+
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+      <!-- Social buttons -->
+      <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+          <a class="btn-floating btn-fb mx-1">
+            <i class="fab fa-facebook-f"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-tw mx-1">
+            <i class="fab fa-twitter"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-gplus mx-1">
+            <i class="fab fa-google-plus-g"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-li mx-1">
+            <i class="fab fa-linkedin-in"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-dribbble mx-1">
+            <i class="fab fa-dribbble"> </i>
+          </a>
+        </li>
+      </ul>
+      <!-- Social buttons -->
+
+    </div>
+    <!-- Footer Elements -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+      <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+    </div>
+    <!-- Copyright -->
   </footer>
   <!--Footer-->
   <!-- end your project here -->
